refactoring the first three exercises

--- a/exercise/question/second/student.css
+++ b/exercise/question/second/student.css
@@ -1,10 +1,26 @@
-.bar-chart {
-    background: steelblue;
+.student-chart {
     border: 1px solid white;
-    text-align: right;
+    text-align: center;
     color: white;
-    border-radius: 10px;
+    font: 18px sans-serif;
+    border-radius: 25px;
+    text-transform: capitalize;
 }
-.legend{
-    background: blue;
+
+button {
+    border-radius: 15px;
+}
+
+.legend {
+    margin-top: 30px;
+}
+
+.legends {
+    border-radius: 25px;
+    display: inline-block;
+    text-align: center;
+    color: white;
+    font: 16px sans-serif;
+    padding: 3px;
+    text-transform: capitalize;
 }
