exercie 6 is completed with refactoring in exercise 3 and 4

--- a/exercise/question/third/table.css
+++ b/exercise/question/third/table.css
@@ -4,4 +4,8 @@
     vertical-align: top;
     padding:0px 20px;
     margin: 5px;
+    color: gray;
+    background-color:wheat;
+    background: border-box;
+
 }
