First Graph of Exercise 9th is done

--- a/exercise/question/fourth/axes/axes.css
+++ b/exercise/question/fourth/axes/axes.css
@@ -1,5 +1,10 @@
 .line-path{
-    stroke: steelblue;
+    stroke: darkblue;
+    stroke-width: 2px;
+    fill: none;
+}.sine-path{
+    stroke: darkred;
+    stroke-width: 2px;
     fill: none;
 }
 circle{
